[project]
name = "flux2-vton-lora"
version = "0.1.0"
description = "Flux.2-dev LoRA for better VTON experience"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "diffusers",
    "kernels>=0.11.1",
    "peft>=0.18.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers" }

[tool.pyright]
reportPrivateImportUsage = false
